fix: Remove Cognifide references

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,7 +66,7 @@
 		</profile>
 	</profiles>
 	<dependencies>
-		<!-- Cognifide Slice Framework dependencies -->
+		<!-- Wunderman Thompson Technology Slice Framework dependencies -->
 		<dependency>
 			<groupId>com.cognifide.slice</groupId>
 			<artifactId>slice-core-api</artifactId>
